<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="to_login_screen">To Login Screen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signature_title" />
    <string name="reply_title" />
    <string name="sync_title" />
    <string name="sync_header" />
    <string name="attachment_summary_off" />
    <string name="attachment_summary_on" />
    <string name="attachment_title" />
    <string name="messages_header" />
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="emailpassword_status_fmt">Email User: %1$s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="activity_login">LoginActivity</string>
</resources>