<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/calculateFragment"
            android:icon="@drawable/calculate_background"
            android:title="Calculate" />
        <item
            android:id="@+id/webViewFragment"
            android:icon="@drawable/webbrowser_background"
            android:title="WebBrowser" />
        <item
            android:id="@+id/musicPlayer"
            android:icon="@drawable/webbrowser_background"
            android:title="Music" />

        <item
            android:id="@+id/fragmentAudio"
            android:icon="@drawable/webbrowser_background"
            android:title="Audio" />

        <item
            android:id="@+id/sensorFragment"
            android:icon="@drawable/webbrowser_background"
            android:title="Sensor" />

        <item
            android:id="@+id/fragmentPhoto"
            android:icon="@drawable/webbrowser_background"
            android:title="Photo" />

    </group>
</menu>