<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <fragment
        android:id="@+id/nav_host_fragment_content_main2"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:defaultNavHost="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:text="@string/emailpassword_title_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signed_out"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EAE9E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow android:id="@+id/emailPasswordFields">

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_weight="1"
                android:hint="Email"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_weight="1"
                android:hint="Password"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow android:id="@+id/emailPasswordButtons">

            <Button
                android:id="@+id/emailSignInButton"
                android:layout_weight="1"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/emailCreateAccountButton"
                android:layout_weight="1"
                android:text="@string/create_account" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/signedInButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EAE9E9"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out" />

        <Button
            android:id="@+id/verifyEmailButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verify_email" />

    </LinearLayout>

    <Button
        android:id="@+id/enterButton"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:text="Войти"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>