<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.kuzin.mireaproj.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.kuzin.mireaproj.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.kuzin.mireaproj.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/calculateFragment"
        android:name="ru.mirea.kuzin.mireaproj.ui.Calculate.CalculateFragment"
        android:label="fragment_calculate"
        tools:layout="@layout/fragment_calculate" />
    <fragment
        android:id="@+id/webViewFragment"
        android:name="ru.mirea.kuzin.mireaproj.ui.Web.WebViewFragment"
        android:label="fragment_web_view"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/musicPlayer"
        android:name="ru.mirea.kuzin.mireaproj.ui.Music.MusicPlayer"
        android:label="fragment_music_player"
        tools:layout="@layout/fragment_music_player" />
    <fragment
        android:id="@+id/fragmentAudio"
        android:name="ru.mirea.kuzin.mireaproj.ui.Audio.FragmentAudio"
        android:label="FragmentAudio" />
    <fragment
        android:id="@+id/sensorFragment"
        android:name="ru.mirea.kuzin.mireaproj.ui.Sensor.SensorFragment"
        android:label="fragment_sensor"
        tools:layout="@layout/fragment_sensor" />
    <fragment
        android:id="@+id/fragmentPhoto"
        android:name="ru.mirea.kuzin.mireaproj.ui.Photo.FragmentPhoto"
        android:label="fragment_photo"
        tools:layout="@layout/fragment_photo" />

</navigation>